@@ -1,3 +1,12 @@
+2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-setup-vprop): check that the supplied
+	DIR param is actually inside this view.  Also set the ROOT-PATH
+	slot.
+	(clearcase-get-vprop): use `error' instead of `assert'
+	(vc-clearcase-start-view): try to create a VPROP for the view that
+	was started.
+
 2010-11-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* vc-clearcase.el (clearcase-dir-status-collect, vc-clearcase-diff):
